examples/test/testpolicy13594.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13594
  namespace: namespace481
spec:
  podSelector:
    matchLabels:
      key25: value26
      key24: value2
      key45: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value44
      podSelector:
        matchLabels:
          key25: value23
